@@ -313,6 +313,9 @@ x2goserver (4.1.0.4-0x2go1.2) UNRELEASED; urgency=medium
       abbreviation parsing into a separate function to take out nesting
       complexity. This trades off nesting complexity (to some degree) with
       code complexity.
+    - {X2Go/Server/Agent/NX/Options.pm,
+       x2goserver/bin/x2goupdateoptionsstring}: fix/silence a few Perl::Critic
+      warnings.
   * debian/control:
     + Build-depend upon lsb-release for distro version detection.
   * debian/x2goserver.manpages:
